--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
-<<<<<<< HEAD
-DS_Store
-=======
-.DS_store
->>>>>>> britt
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+.floo
+.flooignore
